--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@ body {
   /* padding-top: 60px;
     */
   background-color: whitesmoke;
-  color: #000;
+  // color: #000;
   font-family: 'Inter', sans-serif;
   /* font-family: 'Open Sans',sans-serif; */
   /*font-family: Verdana, Arial, Helvetica, sans-serif;*/
