--- a/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
+++ b/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
@@ -251,7 +251,7 @@
                                       </button>
                                       @if (!$s_first) {
                                         <button type="button" class="btn btn-info btn-round btn-sm"
-                                          (click)="reorderSection(t.value,$s_index, -1)">
+                                          (click)="reorderSection(curForm.sections,e.__index, -1)">
                                           <fa-icon [icon]="['fas','arrow-left']"
                                             [fixedWidth]="true">
                                           </fa-icon>
@@ -259,7 +259,7 @@
                                       }
                                       @if (!$s_last) {
                                         <button type="button" class="btn btn-info btn-round btn-sm"
-                                          (click)="reorderSection(t.value,$s_index, 1)">
+                                          (click)="reorderSection(curForm.sections,e.__index, 1)">
                                           <fa-icon [icon]="['fas','arrow-right']"
                                             [fixedWidth]="true">
                                           </fa-icon>
