--- a/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
+++ b/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
@@ -2726,20 +2726,22 @@
                   </div>
                 </div>
               }
-              @if (['file'].indexOf(editItemData.type)>-1 && editItemData.x?.bucket) {
-                @let placeholder = "ie: Report-by-{{$user$.email}}-{{$file$.name}}";
-                <div class="form-group mb-3">
-                  <label class="form-label">Rename file on upload</label>
-                  <input class="form-control" name="editItemData.x.filenameTpl" [placeholder]="placeholder"
-                    [(ngModel)]="editItemData.x.filenameTpl">
-                    <div class="small">
-                      <ul>
-                        <li>$user$ : user info</li>
-                        <li>$unique$ : unique id</li>
-                        <li>$file$ : file info (ie: $file$.name)</li>
-                      </ul>
-                    </div>
-                </div>
+              @if (['file'].indexOf(editItemData.type)>-1) {
+                @if (editItemData.x?.bucket){
+                  @let placeholder = "ie: Report-by-{{$user$.email}}-{{$file$.name}}";
+                  <div class="form-group mb-3">
+                    <label class="form-label">Rename file on upload</label>
+                    <input class="form-control" name="editItemData.x.filenameTpl" [placeholder]="placeholder"
+                      [(ngModel)]="editItemData.x.filenameTpl">
+                      <div class="small">
+                        <ul>
+                          <li>$user$ : user info</li>
+                          <li>$unique$ : unique id</li>
+                          <li>$file$ : file info (ie: $file$.name)</li>
+                        </ul>
+                      </div>
+                  </div>
+                }
                 <div class="form-group mb-3">
                   <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="field-secure"
