--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,6 +76,7 @@ body {
 .bg-reka.ireka-my,
 .bg-reka.dev-ireka-my,
 .bg-reka.alpha-moh-gov-my,
+.bg-reka.reka-jdn-gov-my,
 .bg-reka.aa-unimas-my{
   background-color: #0747a6;
 }
