ng-cm - added autocomplete _param._body
Form Editor
- show field id

Screen Editor
- added $reload$

Screen
- prevent multiple getScreen call
- run init-f for combine screen
- allow pass param to sub screen

--- a/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
+++ b/src/app/design/editor/ui-editor/form-editor/form-editor.component.html
@@ -1991,6 +1991,7 @@
       <h4 class="modal-title">Add new <span class="italic">{{editItemData.type}}
       {{editItemData.subType}}</span></h4>
     }
+    <div class="id-label">{{editItemData?.id}}</div>
   </div>
   <div #editItemForm="ngForm" ngForm>
     <div class="tab-simple fix-gutter" justify="center">
