Screen: Calendar - enable init-f

--- a/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
+++ b/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
@@ -900,7 +900,7 @@
                         </ng-template>
                       </li>
                     }
-                    <li ngbNavItem [disabled]="['list','page','static','combine','map','qr','chatbot'].indexOf(curScreen.type)==-1">
+                    <li ngbNavItem [disabled]="['list','page','static','combine','map','qr','chatbot','calendar'].indexOf(curScreen.type)==-1">
                       <a class="small px-2" ngbNavLink>Init &fnof;</a>
                       <ng-template ngbNavContent>
                         @if (curScreen.id) {
