- Upgrade fortawesome - Added Krypta

--- a/src/app/design/editor/editor.component.html
+++ b/src/app/design/editor/editor.component.html
@@ -73,6 +73,12 @@
           <a class="bar-link" routerLink="cogna" routerLinkActive="active">
             <fa-icon [icon]="['fas', 'robot']" [fixedWidth]="true"></fa-icon>
           </a>
+          <!-- <a class="bar-link" routerLink="jalin" routerLinkActive="active">
+            <fa-icon [icon]="['fas', 'hexagon-nodes']" [fixedWidth]="true"></fa-icon>
+          </a> -->
+          <a class="bar-link" routerLink="krypta" routerLinkActive="active">
+            <fa-icon [icon]="['fas', 'hashtag']" [fixedWidth]="true"></fa-icon>
+          </a>
         </div>
       </div>
       <div class="content">
