--- a/src/app/_shared/modal/edit-form/edit-form.component.html
+++ b/src/app/_shared/modal/edit-form/edit-form.component.html
@@ -191,20 +191,6 @@
                       name="saveAndStay" id="enableQFilter">
                     <label class="form-check-label" for="enableQFilter">Enable advanced query builder</label>
                   </div>
-
-                  <!-- <div class="input-group input-group-sm mb-2">
-                      <label class="input-group-text" for="exportPdfLayout">Qualifier *</label>
-
-                        <app-cm name="singleQ" class="form-control p-0" lang="javascript" [(ngModel)]="_editFormData.singleQ"
-                          [hideControl]="true" [linenumber]="false" placeholder="ie: {'$_.email':$user$.email}" 
-                          [extraAutoComplete]="extraAutoCompleteJs()" subType="passive">
-                        </app-cm> 
-
-                        <div class="input-group-text">
-                          <input class="form-switch-input mt-0" type="checkbox" name="enableQFilter" id="enableQFilter" [(ngModel)]="_editFormData.x.enableQFilter" aria-label="Enable custom query"> &lbrace;&rbrace;
-                        </div>
-                    </div> -->
-
                   @if(_editFormData.x?.enableQFilter){
                   <div class="form-group mb-3">
                     <label class="form-label small mb-2">Query Builder</label>
@@ -359,6 +345,99 @@
                   name="wide">
                 <label class="form-check-label" for="wide">Full width form</label>
               </div>
+              <div class="form-check form-switch mt-1">
+                <input class="form-check-input" type="checkbox" id="wallet" [(ngModel)]="_editFormData.x.wallet"
+                  name="wallet">
+                <label class="form-check-label" for="wallet">Store data in the smart contract</label>
+
+                
+              @if(_editFormData.x?.wallet){
+                <div class="form-group mb-3 mt-1">
+                  <select class="form-select" name="walletId" [compareWith]="compareByIdFn"
+                    [(ngModel)]="_editFormData.x.walletId" required>
+                    <option [ngValue]="null"> * No wallet selected </option>
+                    @for (item of walletList(); track item.id) {
+                    <option [value]="item?.id">{{item?.name}}
+                    </option>
+                    }
+                  </select>
+                </div>
+
+
+                <!-- <div class="form-check form-switch mt-1">
+                <input class="form-check-input" type="checkbox" id="walletOnSave" [(ngModel)]="_editFormData.x.walletOnSave"
+                  name="walletOnSave">
+                <label class="form-check-label" for="walletOnSave">On Save</label>
+                </div>
+                <div class="form-check form-switch mt-1">
+                <input class="form-check-input" type="checkbox" id="walletOnSubmit" [(ngModel)]="_editFormData.x.walletOnSubmit"
+                  name="walletOnSubmit">
+                <label class="form-check-label" for="walletOnSubmit">On Submit</label>
+                </div> -->
+
+
+                <!-- <div class="form-group mb-3">
+
+                  @for (mode of ['save','submit']; track mode) {
+                  
+                      <div class="input-group input-group-sm mb-1">
+                        <div class="input-group-text">
+                          <input class="form-check-input mt-0"  type="checkbox" value="summarize" aria-label="Text summarization"
+                            name="rtxtgenMode" [(ngModel)]="_editFormData.x.rtxtgenMode">
+                        </div>
+                        <span class="input-group-text">On Save</span>
+                        <select class="form-select" name="walletFn" [compareWith]="compareByIdFn"
+                          [(ngModel)]="_editFormData.x.walletFn" required>
+                          <option [ngValue]="null"> * No function selected </option>
+                          @for (item of walletMap()[_editFormData.x.walletId]?.contract?.abiSummary?.functions; track $index) {
+                          <option [value]="item?.name">{{item?.name}}
+                          </option>
+                          }
+                        </select>
+                      </div>
+                  }
+
+                </div> -->
+                      
+
+
+
+                <!-- <div class="form-group mb-3 mt-1">
+                  <select class="form-select" name="walletFn" [compareWith]="compareByIdFn"
+                    [(ngModel)]="_editFormData.x.walletFn" required>
+                    <option [ngValue]="null"> * No function selected </option>
+                    @for (item of walletMap()[_editFormData.x.walletId]?.contract?.abiSummary?.functions; track $index) {
+                    <option [value]="item?.name">{{item?.name}}
+                    </option>
+                    }
+                  </select>
+                </div> -->
+
+                
+                
+                <div class="form-group mb-3">
+                  <label class="form-label">Register data on *</label>
+                  <div>
+                    <div class="btn-group-sm" role="group">
+                      <input type="radio" name="walletOn" [(ngModel)]="_editFormData.x.walletOn" value="save" class="btn-check"
+                        id="walletOnSave" required>
+                      <label class="btn btn-outline-secondary me-1 mb-1" for="walletOnSave">On Save</label>
+                      <input type="radio" name="walletOn" [(ngModel)]="_editFormData.x.walletOn" value="submit" class="btn-check"
+                        id="walletOnSubmit" required>
+                      <label class="btn btn-outline-secondary me-1 mb-1" for="walletOnSubmit">On Submit</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group mb-3">
+                  <label class="form-label">Template for data *</label>
+                  <div class="mx-n2">
+                    <app-cm name="walletTextTpl" lang="html" [(ngModel)]="_editFormData.x.walletTextTpl" [hideControl]="true"
+                      [extraAutoComplete]="extraAutoCompleteHtml()" subType="active" [linenumber]="true" required>
+                    </app-cm>
+                  </div>
+                </div>
+              }
+              </div>
             </div>
             <div class="form-group mb-3">
               <label class="form-label">Previous Form</label>
@@ -488,6 +567,24 @@
                   [extraAutoComplete]="extraAutoCompleteJs()" subType="active" [linenumber]="true">
                 </app-cm>
               </div>
+              <!-- <div class="input-group input-group-sm mb-2 mt-2">
+                <span class="input-group-text">Smart Contract</span>
+                <select class="form-select" name="walletFnOnInit"
+                  (ngModelChange)="onWalletFunctionSelect('onInit',$event)"
+                  [(ngModel)]="_editFormData.x.walletFnOnInit">
+                  <option [ngValue]="null"> * No function </option>
+                  @for (item of walletMap()[_editFormData.x.walletId]?.contract?.abiSummary?.functions; track $index) {
+                  <option [ngValue]="item?.name" >{{item?.name}}
+                  </option>
+                  }
+                </select>
+              </div>
+              @if(fnObj?.['onInit']?.inputs && fnObj?.['onInit']?.inputs.length>0){
+                <app-cm name="walletFnOnInitParam" lang="javascript" [(ngModel)]="_editFormData.x.walletFnOnInitParam" [hideControl]="true"
+                  [skipCheck]="true"
+                  [extraAutoComplete]="extraAutoCompleteJs()" subType="active" [linenumber]="true">
+                </app-cm>
+              } -->
             </div>
             <div class="form-group mb-3">
               <label class="form-label">On Save</label>
@@ -496,6 +593,25 @@
                   [(ngModel)]="_editFormData.onSave" [linenumber]="true">
                 </app-cm>
               </div>
+              
+              <!-- <div class="input-group input-group-sm mb-2 mt-2">
+                <span class="input-group-text">Smart Contract</span>
+                <select class="form-select" name="walletFnOnSave"
+                  (ngModelChange)="onWalletFunctionSelect('onSave',$event)"
+                  [(ngModel)]="_editFormData.x.walletFnOnSave">
+                  <option [ngValue]="null"> * No function </option>
+                  @for (item of walletMap()[_editFormData.x.walletId]?.contract?.abiSummary?.functions; track $index) {
+                  <option [ngValue]="item?.name" >{{item?.name}}
+                  </option>
+                  }
+                </select>
+              </div>
+              @if(fnObj?.['onSave']?.inputs && fnObj?.['onSave']?.inputs.length>0){
+                <app-cm name="walletFnOnSaveParam" lang="javascript" [(ngModel)]="_editFormData.x.walletFnOnSaveParam" [hideControl]="true"
+                  [skipCheck]="true"
+                  [extraAutoComplete]="extraAutoCompleteJs()" subType="active" [linenumber]="true">
+                </app-cm>
+              } -->
             </div>
             <div class="form-group mb-3">
               <label class="form-label">On Submit</label>
@@ -504,6 +620,24 @@
                   [(ngModel)]="_editFormData.onSubmit" [linenumber]="true">
                 </app-cm>
               </div>
+              <!-- <div class="input-group input-group-sm mb-2 mt-2">
+                <span class="input-group-text">Smart Contract</span>
+                <select class="form-select" name="walletFnOnSubmit"
+                  (ngModelChange)="onWalletFunctionSelect('onSubmit',$event)"
+                  [(ngModel)]="_editFormData.x.walletFnOnSubmit">
+                  <option [ngValue]="null"> * No function </option>
+                  @for (item of walletMap()[_editFormData.x.walletId]?.contract?.abiSummary?.functions; track $index) {
+                  <option [ngValue]="item?.name" >{{item?.name}}
+                  </option>
+                  }
+                </select>
+              </div>
+              @if(fnObj?.['onSubmit']?.inputs && fnObj?.['onSubmit']?.inputs.length>0){
+                <app-cm name="walletFnOnSubmitParam" lang="javascript" [(ngModel)]="_editFormData.x.walletFnOnSubmitParam" [hideControl]="true"
+                  [skipCheck]="true"
+                  [extraAutoComplete]="extraAutoCompleteJs()" subType="active" [linenumber]="true">
+                </app-cm>
+              } -->
             </div>
             <div class="form-group mb-3">
               <label class="form-label">On View</label>
