Added krypta in lambda

--- a/src/app/design/editor/lambda-editor/lambda-editor.component.html
+++ b/src/app/design/editor/lambda-editor/lambda-editor.component.html
@@ -229,7 +229,7 @@
                 <div class="input-group input-group-sm">
                   <span class="input-group-text">{{b.name}}</span>
                   <span class="input-group-text"
-                    [ngClass]="['_mail','_entry','_endpoint','_mapper','_user','_token','_io','_sql','_http','_util','_jsoup','_live'].indexOf(b.type)>-1?'bg-secondary text-white':'bg-white'">
+                    [ngClass]="['_mail','_entry','_endpoint','_mapper','_user','_token','_io','_sql','_http','_util','_jsoup','_krypta','_live'].indexOf(b.type)>-1?'bg-secondary text-white':'bg-white'">
                     {{b.type}}{{b.srcId?'_'+b.srcId:''}}
                   </span>
                 </div>
